Version 0.1
===========

19.12.2009
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Project setup
  * Added OAuth twitter authorization (login and logout functionallity)
  * Added authentication helpers
  * Added my / friend's tweets timeline
  * Added rake task (rake twitter:refresh_lists) for refreshing lists in database with those on the twitter account
  * Added subscriptions resource for user subscriptions to a list
  * Added twitter_id (id of the user on twitter) column to users table
  * Added callbacks in subscription model for adding/removing users in twitter lists
  * Added TwitterHttpAuth class for http authorization of 140_mk user which is responsible for adding/removing users to it's lists
  * Added listing of last tweets from most subscribed lists on front page
  * Added last members from a list on front page
  * Added localization of front page and localization for Rails internals
  * Refactoring of requests to Twitter API via TwitterHttpAuth

  Peco Danajlovski <vortexmk@gmail.com>
  * Added this CHANGELOG file
  * Introducing Compass with Compass-960 plugin for 960gs CSS library
  * Default layout with HAML / SASS (using Compass)
  * Introducing basic design and logo
  * Introducing simple navigation plugin and macedonian locale

20.12.2009
==========

  Dalibor Nasevic <dalibor.nasevic@gmail.com>
  * Refactoring in twitter_http_auth class, using singletone instance
  * Added new rake tasks (rake twitter:update_lists, rake twitter:update_subscriptions and rake twitter:update that does both)
  * Moved global constants to G140 hash namespace (example: G140[:site_title])

  Peco Danajlovski <vortexmk@gmail.com>
  * Introducing automated deployment with capistrano
  * Updated CSS on the front page
