@@ -6,6 +6,13 @@
 
 
 #categories
+  h1
+    background: #0094DA
+    color: #fff
+    text-align: center
+    margin: 5px
+    +border-radius(12px)
+
   .category
     background: #E1F3FD
     margin-top: 10px
@@ -26,6 +33,7 @@
       .tweet
         padding: 10px 5px
         border-bottom: 1px dashed #999
+        min-height: 45px
 
         .body
           color: #666
