@@ -1,0 +1,23 @@
+#categories
+  %h1= translate_list_name(@list.name) 
+  .category
+    .tweets
+      %h2= t('title.last_tweets')
+      - @tweets.each do |tweet|
+        .tweet
+          = link_to image_tag(tweet.user.profile_image_url), user_url(tweet.user.screen_name)
+          .body
+            = link_to h(tweet.user.screen_name), user_url(tweet.user.screen_name)
+            %span.when= t('tweet.created_at', :time => time_ago_in_words(tweet.created_at))
+            = auto_link(tweet.text)
+  .category
+    .tweets
+      %h2= t('title.last_members')
+      - @members.each do |member|
+        .tweet
+          = link_to image_tag(member.profile_image_url), user_url(member.screen_name)
+          .body
+            = link_to h(member.screen_name), user_url(member.screen_name)
+            %span.when= t('user.created_at', :time => time_ago_in_words(member.created_at))
+            = t('user.has_written')
+            = pluralize(member.statuses_count, t('user.tweet'))
