@@ -2,7 +2,7 @@
   - @lists_tweets.each_pair do |list_name, tweets|
     .category      
       .tweets
-        %h2= translate_list_name(list_name)
+        %h2= link_to translate_list_name(list_name), list_path(list_name)
         - tweets.each do |tweet|
           .tweet
             = link_to image_tag(tweet.user.profile_image_url), user_url(tweet.user.screen_name)
