@@ -1,5 +1,6 @@
 G140 = {
-  :site_title => "140.mk",
+  :site_name => "140.mk",
   :front_page_lists_count => 6,
-  :front_page_tweets_per_list => 5
+  :front_page_tweets_per_list => 5,
+  :side_page_tweets_per_list => 10
 }
